--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^1.1.1
   provider: ^4.0.5+1
   flutter_bloc: ^4.0.0
+  google_fonts: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,7 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
