--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   provider: ^4.0.5+1
   flutter_bloc: ^4.0.0
   google_fonts: ^1.0.0
+  email_validator: ^1.0.4
+  flushbar: ^1.10.0
+  flutter_spinkit: ^4.1.2+1
 
 
   # The following adds the Cupertino Icons font to your application.
