--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^0.6.6+1
   firebase_storage: ^3.1.5
   http: ^0.12.1
+  random_string: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
